--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,6 +16,8 @@ jobs:
       #   with:
       #     python-version: '3.x'
       - uses: iterative/setup-cml@v1
+        env:
+            repo_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Train model
         run: |
           # Your ML workflow goes here
