--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,24 +1,14 @@
-name: CML-Example-Workflow
+name: mlops-exaple-tensorflow-regression
 on: [push]
 jobs:
   run:
-    runs-on: ubuntu-latest
-    # optionally use a convenient Ubuntu LTS + CUDA + DVC + CML image
-    container: docker://iterativeai/cml:0-dvc2-base1-gpu
-    # container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
+    runs-on: [ubuntu-latest]
+    container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v2
-      # may need to setup NodeJS & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v2
-      #   with:
-      #     node-version: '12'
-      # - uses: actions/setup-python@v2
-      #   with:
-      #     python-version: '3.x'
-      - uses: iterative/setup-cml@v1
+      - name: 'Train my model'
         env:
-            repo_token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Train model
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Your ML workflow goes here
           pip install -r requirements.txt
@@ -26,4 +16,5 @@ jobs:
           
           echo "## Model Metrics" > report.md
           cat metrics.txt >> report.md
+          
           cml-send-comment report.md
