--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -3,7 +3,8 @@ on: [push]
 jobs:
   run:
     runs-on: [ubuntu-latest]
-    container: docker://dvcorg/cml-py3:latest
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
+    #container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v2
       - name: 'Train my model'
